--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,8 @@
     <groupId>cn.hollis</groupId>
     <artifactId>NFTurbo</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>NFTurbo</name>
+    <name>liuhaha</name>
     <packaging>pom</packaging>
-    <description>A NFT Turbo</description>
 
     <properties>
         <java.version>21</java.version>
